# myts

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.toml
.github/workflows/: release.yaml
myts-types/basic/accounts/: models.ts
myts-types/basic/streamables/: models.ts
myts-types/test_playground/: objs.ts  other_objs.ts  shared_types.ts
src/myts/: __init__.py  cli.py  configs.py  core.py  decorators.py  types.py  utils.py
src/myts/extractors/: ts.py
src/myts/tests/testproj/: mytsconfig.toml  objs.py  other_objs.py  shared_types.py
src/myts/tests/testproj/single-out/: types.ts
tests/: test_cli.py  test_core.py  test_snapshots.py
tests/projects/basic/expected/basic/accounts/: models.ts
tests/projects/basic/expected/basic/streamables/: models.ts
tests/projects/basic/src/basic/: __init__.py
tests/projects/basic/src/basic/accounts/: models.py
tests/projects/basic/src/basic/common/: types.py
tests/projects/basic/src/basic/streamables/: models.py
tests/test_playground/: mytsconfig-single.toml  objs.py  other_objs.py  shared_types.py
tests/test_playground/single-out/: types.ts
