[project]
name = "myts"
version = "0.1.13"
description = "MyPy to TS generator"
authors = [
    { name = "Matthew Dennis" },
    { name = "dennmat+myts@gmail.com" },
]
requires-python = ">=3.12,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "watchfiles>=1.1.1,<2",
    "mypy>=1.20.0,<2",
    "pyhumps>=3.8.0,<4",
    "pydantic>=2.13.3,<3",
    "rich>=15.0.0,<16",
]

[project.urls]
Homepage = "https://github.com/dennmat/myts"
Repository = "https://github.com/dennmat/myts"
Issues = "https://github.com/dennmat/myts/issues"

[project.scripts]
myts = "myts.cli:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "twine (>=6.2.0,<7.0.0)",
    "build (>=1.4.2,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "ruff (>=0.15.11,<0.16.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "tox>=4.53.0",
]

[tool.ruff.format]
indent-style = "tab"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]

[tool.coverage.run]
branch = true
parallel = true
source = ["myts"]
omit = ["__main__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    'pragma: no cover',
    '\.\.\.',
    'if TYPE_CHECKING:',
    'if __name__ == "__main__":'
]
